--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
 
-    <header>
-        <div>
-            <div>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
                 <div>
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -25,8 +25,8 @@
         </div>
     </header>
 
-    <div>
-        <div>
+    <div class="container">
+        <div class="row">
             <div>
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -37,7 +37,7 @@
         </div>
 
 
-        <div>
+        <div class="row">
             <div>
                 <h3>This Month's Promotions</h3>
             </div>
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="row"> 
             <div>
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -59,9 +59,9 @@
         </div>
     </div>
 
-    <footer>
-        <div>
-            <div>             
+    <footer >
+        <div class="container">
+            <div class="row">              
                 <div>
                     <h5>Links</h5>
                     <ul>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
            </div>
-           <div>             
+           <div class="row">             
                 <div>
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
